fix toaster on mobile view

--- a/css/main.css
+++ b/css/main.css
@@ -119,27 +119,28 @@ body {
   height: 25px;
   width: 25px;
 }
-.nav-top .btn-cart {
+
+.btn-cart {
   position: relative;
 }
-.nav-top .btn-cart img {
+.btn-cart img {
   margin: 6px 0 !important;
   height: 25px;
 }
-.nav-top .btn-cart .hover {
+.btn-cart .hover {
   opacity: 0;
 }
-.nav-top .btn-cart .none-hover {
+.btn-cart .none-hover {
   opacity: 1;
   position: absolute;
   height: 25px;
   left: 0;
   top: -6px;
 }
-.nav-top .btn-cart:hover .hover {
+.btn-cart:hover .hover {
   opacity: 1;
 }
-.nav-top .btn-cart:hover .none-hover {
+.btn-cart:hover .none-hover {
   opacity: 0;
   transition: 0.3s;
 }
@@ -572,6 +573,18 @@ footer .footer-lower i:hover {
   opacity: 1;
 }
 
+@media screen and (max-width: 990px) {
+  .btn-cart {
+    float: right;
+    padding-right: 20px;
+  }
+
+  .toast {
+    position: fixed !important;
+    top: 85vh !important;
+    right: 30px !important;
+  }
+}
 @media screen and (max-width: 768px) {
   .card-form {
     width: 90% !important;
