--- a/css/styles/global.sass
+++ b/css/styles/global.sass
@@ -104,24 +104,24 @@ body
             height: 25px
             width: 25px
         
-    .btn-cart
-        position: relative
+.btn-cart
+    position: relative
 
-        img 
-            margin: 6px 0 !important
-            height: 25px
+    img 
+        margin: 6px 0 !important
+        height: 25px
 
-        .hover 
-            opacity: 0
+    .hover 
+        opacity: 0
 
-        .none-hover
-            opacity: 1
-            position: absolute
-            height: 25px
-            left: 0
-            top: -6px
+    .none-hover
+        opacity: 1
+        position: absolute
+        height: 25px
+        left: 0
+        top: -6px
 
-    .btn-cart:hover 
+    &:hover 
         .hover 
             opacity: 1
 
