--- a/css/styles/queries.sass
+++ b/css/styles/queries.sass
@@ -1,3 +1,13 @@
+@media screen and (max-width: 990px)
+    .btn-cart 
+        float: right
+        padding-right: 20px
+
+    .toast 
+        position: fixed !important
+        top: 85vh !important 
+        right: 30px !important
+
 @media screen and (max-width: 768px)
     .card-form
         width: 90% !important
